[project]
name = "sopsy"
version = "1.0.0"
description = "SOPS Python wrapper library"
authors = [{ name = "Nicolas Karolak", email = "nicolas@karolak.fr" }]
dependencies = ["pyyaml>=6.0.1"]
readme = "README.md"
requires-python = ">= 3.8"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Security :: Cryptography",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
license = { text = "GPL-3.0-or-later" }
keywords = ["sops"]

[project.urls]
Homepage = "https://sopsy.nikaro.net"
Repository = "https://github.com/nikaro/sopsy"
Issues = "https://github.com/nikaro/sopsy/issues"
Changelog = "https://sopsy.nikaro.net/changelog/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
  "basedpyright>=1.15.1",
  "black>=24.8.0",
  "mkdocs-coverage>=1.1.0",
  "mkdocs-material>=9.5.34",
  "mkdocstrings[python]>=0.26.1",
  "mypy>=1.11.2",
  "pytest-cov>=5.0.0",
  "pytest>=7.4.3",
  "ruff>=0.6.3",
  "twine>=5.1.1",
  "types-pyyaml>=6.0.12.20240808",
  "typing-extensions>=4.12.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN401", "INP001", "S101", "SLF001"]
"docs/*" = ["A001", "INP001"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.pylint]
max-args = 15

[tool.pyright]
reportAny = false
reportImplicitOverride = false

[tool.commitizen]
version_provider = "pep621"
update_changelog_on_bump = true

[tool.cibuildwheel]
build-frontend = "build[uv]"
